--- a/index.html
+++ b/index.html
@@ -6,18 +6,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/resources/style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;700&display=swap" rel="stylesheet">
+    <title>Website Wireframing</title>
 </head>
 
 <body>
-    <header>
+    <header class="navbar">
+        <img class="logo" src="resources/photos/logo.jpg" alt="Logo">
         <ul>
-            <li>Home</li>
-            <li>Services</li>
-            <li>About Us</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Our Mission</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
     </header>
+
+    <section>
+        <div class="section-main">
+            <p>Welcome to Cube! The wireframing stage build of this wonderful traveling focused website</p>
+            <button class="learn-more">Learn More</button>
+        </div>
+    </section>
+
+    <section>
+        <div class="section-colors">
+            <div class="color-1">
+                <p>Metallic Seaweed <br> #087E8B
+                </p>
+            </div>
+            <div class="color-2">
+                <p>Orange Red Crystals <br> #FF5A5F
+                </p>
+            </div>
+
+            <div class="color-3">
+                <p>Onyx <br> #3C3C3C
+                </p>
+            </div>
+
+            <div class="color-4">
+                <p>Opera Mauve <br> #C1839F
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="section-fonts">
+            <h2>Fonts</h2>
+
+            <div class="font-1">
+                <h3>Roboto Slab</h3>
+                <p class="font-1-regular">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+                <p class="font-1-italics">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+                <p class="font-1-bold">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+            </div>
+
+            <div class="font-2">
+                <h3>Mukta</h3>
+                <p class="font-2-regular">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+                <p class="font-2-italics">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+                <p class="font-2-bold">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+            </div>
+
+            <div class="font-3">
+                <h3>Barlow</h3>
+                <p class="font-3-regular">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+                <p class="font-3-italics">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+                <p class="font-3-bold">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
