--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
         </div>
     </section>
 
+    <footer>
+        <div class="footer-socials">
+            <div class="social-media-1"></div>
+            <div class="social-media-1"></div>
+            <div class="social-media-1"></div>
+        </div>
+        <p>&copy; Dennis Nguyen 2022</p>
+    </footer>
+
 </body>
 
 </html>
