--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <header class="navbar">
         <img class="logo" src="resources/photos/logo.jpg" alt="Logo">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Our Mission</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <a href="#">Home</a>
+            <a href="#">Services</a>
+            <a href="#">Our Mission</a>
+            <a href="#">Contact Us</a>
         </ul>
     </header>
 
