Add styles for Fonts section

--- a/index.html
+++ b/index.html
@@ -29,15 +29,25 @@
         </ul>
     </header>
 
-    <section>
-        <div class="section-main">
-            <p>Welcome to Cube! The wireframing stage build of this wonderful traveling focused website</p>
+    <section class="section-welcome">
+        <div class="welcome-message">
+            <p>Welcome to Cube! The wireframing stage build of this wonderful traveling focused website.
+            </p>
+        </div>
+        <div class="center-button">
             <button class="learn-more">Learn More</button>
         </div>
+
+
+
     </section>
 
     <section>
+
+        <h2 class="colors-header">Colors</h2>
         <div class="section-colors">
+
+
             <div class="color-1">
                 <p>Metallic Seaweed <br> #087E8B
                 </p>
@@ -60,8 +70,9 @@
     </section>
 
     <section>
+        <h2 class="fonts-header">Fonts</h2>
         <div class="section-fonts">
-            <h2>Fonts</h2>
+
 
             <div class="font-1">
                 <h3>Roboto Slab</h3>
